--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,9 @@ a {
 }
 
 /* 전체 레이아웃 */
+.container{
+  min-width: 1200px;
+}
 .header, .main, .slogan, .footer, .menu{
   width: 1000px;
   margin: 0 auto;
@@ -40,9 +43,8 @@ a {
 }
 .logo{
   position: absolute;
-  width: 500px;
-  left: 0;
-  top: 5%;
+  float: left;
+  top: 15px;
 }
 
 /* member 영역 */
@@ -64,6 +66,8 @@ a {
   padding: 20px;
   background-color: #988574;
   color: #fff;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
 }
 .menu{
   margin: 0 auto;
@@ -73,7 +77,7 @@ a {
 }
 .menu a {
   display: block;
-  padding: 5px 0;
+  padding-top: 15px;
 }
 .menu span{
   display: block;
